- Width and height spin boxes in the style dialog are now coupled when
  keep aspect ratio is in effect.
- Fix unselect object : use right button + shift
- Fixed rounded rectangle + gradient
- Fixed saving shadowed objects (when only their color differed from
  the defaults)
- Restored a lot of backwards compatibility (formatting, bullets, numbers,
  whitespace handling etc.)
- Speedup in displaying of the pixmap objects
- Fixed the drawing of the background (no gradient when background is
  an image or a clipart)

Crashes:
- Fixed crash when we close kword and "special char dialogbox" is not closed
- Fixed several memory leaks
- Fixed crash when we cancel insert time/date variable.
- Fixed crash when we duplicate page and there was an embedded document.
- Fixed crash when we split view and we try to open menu when factory() is null
- Fixed crash when we didn't select a slide and try to launch presentation

Changes between KPresenter-1.2-RC1 and KPresenter-1.2
=====================================================
Bugfixes:
- Fix undo/redo move object.
- Fix #45966 kpresenter refuses to update image with same name
- Fix #45991: problems w.r.t. font color and bullets
- Fix mouse move event + vertical alignment
- Fix resize to height : Don't create command when it's not necessary.
- Fix availableHeight + vertical alignment
- Fix save variable.
- Fix recalc page number + sticky object
- Fix draw gradient + rectangle object
- Fix presentation mode : Don't draw grid and helpline in this mode
- Fix update ruler tabs when we switch between two text object
- Fix move up/down style
- Fix restore style shortcut when we remove/rename/add style

Changes after KPresenter 1.2
============================
- Use ForbiddenCursor when object is "protect size"
- Spell checker can spellcheck only selection
- Now Shadow is a text properties
- Add "copy link" feature.
- Add "add to bookmark" feature
- We can change "picture path"
- Add "remove link"