@@ -82,6 +82,8 @@ k_dcop:
     bool textShadow() const;
     void setTextShadow( bool b );
 
+    double relativeTextSize() const;
+    void setRelativeTextSize( double _size );
 
 private:
     KWTextFrameSet *m_frametext;
