@@ -3230,7 +3230,8 @@ void KWView::formatFont()
                                textIface->underlineLineStyle(),
                                textIface->underlineLineType(),
                                textIface->strikeOutLineType(),
-                               textIface->strikeOutLineStyle());
+                               textIface->strikeOutLineStyle(),
+                               textIface->relativeTextSize());
 
     connect( m_fontDlg, SIGNAL( apply() ),
                  this, SLOT( slotApplyFont() ) );
@@ -3263,6 +3264,7 @@ void KWView::slotApplyFont()
                                                          m_fontDlg->getStrikeOutLineType(),
                                                          m_fontDlg->getStrikeOutLineStyle(),
                                                          m_fontDlg->getShadowText(),
+                                                         m_fontDlg->getRelativeTextSize(),
                                                          flags);
             if (cmd)
                 globalCmd->addCommand(cmd);
