@@ -558,6 +558,7 @@ void KoStyleFontTab::update()
     m_chooser->setStrikeOutLineStyle(m_style->format().strikeOutLineStyle());
     m_chooser->setStrikeOutlineType(m_style->format().strikeOutLineType());
     m_chooser->setShadowText( m_style->format().shadowText());
+    m_chooser->setRelativeTextSize( m_style->format().relativeTextSize());
 }
 
 void KoStyleFontTab::save()
@@ -581,6 +582,7 @@ void KoStyleFontTab::save()
     m_style->format().setStrikeOutLineStyle( m_chooser->getStrikeOutLineStyle() );
     m_style->format().setStrikeOutLineType (m_chooser->getStrikeOutLineType());
     m_style->format().setShadowText(m_chooser->getShadowText());
+    m_style->format().setRelativeTextSize( m_chooser->getRelativeTextSize());
 
 }
 
