@@ -122,3 +122,4 @@ Changes after KPresenter 1.2
 - Add "add to bookmark" feature
 - We can change "picture path"
 - Add "remove link"
+- Add font properties : change relative font size when we sub/super script font
